--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ button:focus {outline:0;}
 
 .banner-image {
     background-image:linear-gradient(to bottom, rgba(49,107,131, 0.32), rgba(49,107,131, 1)),
-    url('/img/hero-banner/1.jpg');
+    url('/img/image.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   background-position: center;
