--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,8 @@ html, body {
     margin: 0px;
     padding: 0;
     width: 100%;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
+    overflow: visible;
 }
 
 * {
@@ -27,6 +28,9 @@ button:focus {outline:0;}
 
 
 /* -------------------- navbar ---------------------- */
+.navbar{
+    background-color: rgb(33, 37, 41);
+}
 .navbar-brand{
     font-family: 'Abril Fatface', cursive;
     letter-spacing: 2px;
@@ -123,6 +127,291 @@ button:focus {outline:0;}
 
 /* -------------------- sec2 --------------------------- */
 .sec2{
-    min-height: 300px;
-    /* background-color: #316b83; */
+    margin-top: -1%;
+    min-height: 500px;
+    background-color: #316b83;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sec2-inner{
+    max-width: 1200px;
+    margin:0 auto;
+    display: flex;
+}
+.sec2-left{
+    flex-basis: 50%;
+    position: relative;
+}
+.sec2-img1{
+    width: 300px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.sec2-img2{
+    width: 300px;
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.sec2-right{
+    flex-basis: 50%;
+}
+.sec2-right h1{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
+    color: whitesmoke;
+    letter-spacing: 1.5px;
+}
+.sec2-right p{
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    color: whitesmoke;
+    letter-spacing: 1.5px;
+}
+.sec2-right a{
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    color: whitesmoke;
+    letter-spacing: 1.5px;
+    transition: .2s ease-in-out;
+}
+
+.sec2-right a:hover{
+    color: #e1e8eb;
+}
+
+/* -------------------- sec3 --------------------------- */
+.sec3{
+    min-height: 700px;
+    max-width: 1200px;
+    margin:0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sec3-left{
+    flex-basis: 50%;
+}
+.sec3-left h1{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 35px;
+    color: #334257;
+    letter-spacing: 1.5px;
+    margin-bottom: 15px;
+}
+.sec3-left p{
+    width: 90%;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    color: #316b83;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    margin-bottom: 20px;
+}
+.sec3-left h2{
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    color: #316b83;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+}
+.sec3-left h2 i{
+    margin-right: 12px;
+}
+.sec3-right{
+    flex-basis: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.sec3-box{
+    cursor: pointer;
+    width: 280px;
+    height: 220px;
+    border-radius: 8px;
+    margin-bottom: 14px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    color: whitesmoke;
+    display: flex;
+    align-items: left;
+    justify-content: center;
+    flex-direction: column;
+    transition: .2s ease-in-out;
+}
+.sec3-box:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 10px 15px -2px, rgba(0, 0, 0, 0.3) 0px 10px 12px -3px;
+}
+.sec3-box-top{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding-left: 8%;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 1px;
+}
+.sec3-box-top i{
+    font-size: 25px;
+    margin-right: 8px;
+}
+.sec3-box-bottom{
+    padding-left: 8%;
+    width: 90%;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 1.5px;
+    font-size: 14px;
+}
+.sec3-box1{
+    background-color: #334257;
+}
+.sec3-box2{
+    background-color: #548ca8;
+}
+.sec3-box3{
+    background-color: #316b83;
+}
+.sec3-box4{
+    background-color:  #6D8299;
+} 
+
+/* -------------------- sec4 --------------------------- */
+.sec4{
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    background-color: #e1e8eb;
+    min-height: 450px;
+    max-width: 1200px;
+    margin:10px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.sec4 h1{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
+    color: #334257;
+    letter-spacing: 1.5px;
+    margin: 15px 0;
+}
+.sec4 h2{
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    color: #334257;
+    letter-spacing: 1.5px;
+    margin: 15px 0;
+}
+.sec4 p{
+    width: 80%;
+    margin: 0 auto 15px auto;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    color: #316b83;
+    letter-spacing: 1.5px;
+    font-weight: 700;
+}
+.sec4-bottom{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.sec4-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    border-radius: 8px;
+    height: 250px;
+    width: 300px;
+    margin: 15px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    transition: .2s ease-in-out;
+}
+.sec4-box:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 10px 15px -2px, rgba(0, 0, 0, 0.3) 0px 10px 12px -3px;
+}
+.sec4-box1{
+    background-color: #548CA8;
+}
+.sec4-box2{
+    background-color: #316B83;
+}
+.sec4-box3{
+    background-color: #6D8299;
+}
+
+.sec4-box h1{
+    color: whitesmoke;
+    text-align: center;
+    font-size: 28px;
+}
+.sec4-box p{
+    color: whitesmoke;
+    font-size: 12px;
+    width: 90%;
+}
+
+.sec4-down{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.sec4-boxx{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    border-radius: 8px;
+    height: 170px;
+    width: 300px;
+    margin: 15px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    transition: .2s ease-in-out;
+}
+.sec4-boxx:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 10px 15px -2px, rgba(0, 0, 0, 0.3) 0px 10px 12px -3px;
+}
+.sec4-boxx1{
+    background-color: #334257;
+}
+.sec4-boxx2{
+    background-color:#6D8299 ;
+}
+.sec4-boxx3{
+    background-color: #548ca8;
+}
+.sec4-boxx i{
+    color: whitesmoke;
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 15px;
+}
+.sec4-boxx p{
+    color: whitesmoke;
+    font-size: 12px;
+    width: 90%;
+}
+
+.sec4 a{
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    color: #334257;
+    letter-spacing: 1.5px;
+    margin: 10px 0 25px 0;
+    transition: .2s ease-in-out;
+}
+
+.sec4 a:hover{
+    color: #316b83;
 }
