--- a/css/styles.css
+++ b/css/styles.css
@@ -81,12 +81,14 @@ button:focus {outline:0;}
     margin: 20px auto; 
 }
 .sec1-content h3{
+    text-align: justify;
     font-family: 'Raleway', sans-serif;
     letter-spacing: 2px;
     color: whitesmoke !important;
     font-size: 18px;
     width: 60%;
     margin: 10px auto 30px auto; 
+    line-height: 25px;
 }
 .sec1-contact{
     cursor: pointer;
@@ -201,6 +203,7 @@ button:focus {outline:0;}
     flex-basis: 50%;
 }
 .sec3-left h1{
+    width: 90%;
     font-family: 'Montserrat', sans-serif;
     font-size: 35px;
     color: #334257;
@@ -332,7 +335,7 @@ button:focus {outline:0;}
     flex-direction: column;
     cursor: pointer;
     border-radius: 8px;
-    height: 250px;
+    height: 200px;
     width: 300px;
     margin: 15px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -981,7 +984,7 @@ footer{
 .te-sec1{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     background-image:linear-gradient(to bottom, rgba(49,107,131, 0.32), rgba(49,107,131, 1)),
-    url('../img/team-page/istockphoto-1201679769-612x612.jpg');
+    url('../img/team-page/krakenimages-Y5bvRlcCx8k-unsplash.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -1053,7 +1056,7 @@ footer{
 .cu-sec1{
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     background-image:linear-gradient(to bottom, rgba(49,107,131, 0.32), rgba(49,107,131, 1)),
-    url('../img/contact-us/david-veksler-HpmDAS1Dozs-unsplash.jpg');
+    url('../img/contact-us/pawel-czerwinski--0xCCPIbl3M-unsplash.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
