--- a/css/styles.css
+++ b/css/styles.css
@@ -1300,7 +1300,7 @@ footer{
 }
 .footer-box p{
     color:whitesmoke ;
-	font-size: 14px;
+	font-size: 18px;
 	font-family: 'Raleway', sans-serif;
 	line-height: 24px;
     letter-spacing: 1.5px;
@@ -1314,6 +1314,14 @@ footer{
 	font-family: 'Poppins', sans-serif;
     letter-spacing: 1.5px;
 	padding-bottom: 10px;
+	font-weight: 700;
+}
+.footer-box h3{
+    color:whitesmoke ;
+	font-size: 24px;
+	font-family: 'Montserrat', sans-serif;
+    letter-spacing: 1.5px;
+	padding-bottom: 0px;
 	font-weight: 700;
 }
 .footer-box a{
@@ -1506,7 +1514,7 @@ footer{
     padding-left: 7%;
     padding-top: 10px;
     font-family: 'Poppins', sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     color: #548CA8;
     letter-spacing: 1.5px;
 	font-weight: 800;
@@ -1652,7 +1660,7 @@ footer{
         padding-left: 7%;
         padding-top: 10px;
         font-family: 'Poppins', sans-serif;
-        font-size: 14px;
+        font-size: 12px;
         color: #548CA8;
         letter-spacing: 1.5px;
         font-weight: 800;
@@ -1809,7 +1817,7 @@ footer{
         padding-left: 7%;
         padding-top: 10px;
         font-family: 'Poppins', sans-serif;
-        font-size: 14px;
+        font-size: 12px;
         color: #548CA8;
         letter-spacing: 1.5px;
         font-weight: 800;
