--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@600&family=Raleway:wght@500&family=Roboto+Slab&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alegreya+Sans:wght@700&family=Lato:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
 /* 
 font-family: 'Montserrat', sans-serif;
@@ -81,6 +82,14 @@ button:focus {outline:0;}
     color: whitesmoke !important;
     margin-bottom: 10px;
     font-size: 80px;
+}
+.sec1-content h4{
+    font-family: 'Great Vibes', cursive;
+    letter-spacing: 3px;
+    color: whitesmoke !important;
+    margin-bottom: 10px;
+    font-size: 40px;
+    font-weight: 700;
 }
 .sec1-content h2{
     font-family: 'Poppins', sans-serif;
