--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@600&family=Raleway:wght@500&family=Roboto+Slab&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alegreya+Sans:wght@700&family=Lato:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alegreya+Sans:wght@700&family=Lato:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
 /* 
@@ -84,12 +84,12 @@ button:focus {outline:0;}
     font-size: 80px;
 }
 .sec1-content h4{
-    font-family: 'Great Vibes', cursive;
+    font-family: 'Lato', sans-serif;
     letter-spacing: 3px;
     color: whitesmoke !important;
-    margin-bottom: 10px;
-    font-size: 40px;
-    font-weight: 700;
+    margin-bottom: 40px;
+    font-size: 20px;
+    font-weight: 500 !important;
 }
 .sec1-content h2{
     font-family: 'Poppins', sans-serif;
@@ -627,6 +627,12 @@ button:focus {outline:0;}
 
 /* ------------------------------- responsive ----------------------- */
 @media screen and (min-width:768px) and (max-width:1199px){
+    /* .sec1-content h4{
+        font-size:25px ;
+    }
+    .sec1-content h2{
+        font-size:25px ;
+    } */
     .sec1-content h3{
         text-align: justify;
         font-family: 'Raleway', sans-serif;
