--- a/css/styles.css
+++ b/css/styles.css
@@ -2589,3 +2589,63 @@ footer{
         flex-direction: column;
     }
 }
+
+/* ------------------- disclaimer ------------------- */
+
+.dis{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.dis h2{
+    font-family: 'Lato', sans-serif;
+    letter-spacing: 3px;
+    color: #334257;
+    margin-bottom: 10px;
+    font-size: 40px;
+    font-weight: 700 !important;
+}
+
+.dis p{
+    text-align: justify;
+    font-family: 'Raleway', sans-serif;
+    letter-spacing: 2px;
+    color: #316b83 !important;
+    font-size: 18px;
+    width: 60%;
+    margin: 10px auto 30px auto; 
+    line-height: 25px;
+    font-weight: 700;
+}
+
+.dis a{
+    text-decoration: none;
+    color: whitesmoke;
+    background-color: #316b83;
+    border: 4px solid #316b83;
+    font-family: 'Poppins', sans-serif;
+    padding: 8px 18px;
+    transition: .2s ease-in-out;
+}
+.dis a:hover{
+    color: #316b83;
+    background-color: transparent;
+}
+
+@media screen and (min-width:768px) and (max-width:1199px){
+    .dis p{
+        width: 80%;
+        font-size: 14px;
+        line-height: 20px;
+    }
+}
+
+@media screen and (max-width:767px) {
+    .dis p{
+        width: 90%;
+        font-size: 12px;
+        line-height: 18px;
+    }
+}
